# -ACL-2026-Oral-Timely-Machine

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  README_CN.md  pyproject.toml
rl/internbootcamp_v2/: .gitignore  README.md  pyproject.toml  setup.py
rl/internbootcamp_v2/.streamlit/: config.toml
rl/internbootcamp_v2/examples/: make_timer_toy_data.py  start_train.py  start_train_yidian.py
rl/internbootcamp_v2/examples/timer_toy_data/: train.jsonl  train.parquet  val.jsonl  val.parquet
rl/internbootcamp_v2/internbootcamp/bootcamps/Basic_LLM_timer/: Basic_timer_reward_calculator.py  Basic_timer_reward_calculator_linear.py  Basic_timer_reward_calculator_orig.py  Basic_timer_tool.py  Jericho_timer_tool.py  ML_simulator.py  MachineLearning_timer_tool.py  __init__.py  judge_model_infos.py  local_jericho_server.py  local_jericho_server_orig.py  local_timer_server.py  local_timer_sever_ml_task.py  math_reward.py  metrics.py
rl/internbootcamp_v2/internbootcamp/bootcamps/Basic_LLM_timer/LLM-Timer/: readme.md  setup.py
rl/internbootcamp_v2/internbootcamp/bootcamps/Basic_LLM_timer/configs/: llm_timer_multiturn_w_tool_grpo.yaml  llm_timer_tool_config.yaml
rl/internbootcamp_v2/internbootcamp/bootcamps/Basic_LLM_timer/dataset_preprocess/: Base_reasoning_preprocess.py  Base_reasoning_preprocess_AIME_and_GPQA.py  Base_reasoning_preprocess_DAPO.py  (+3 more)
rl/internbootcamp_v2/internbootcamp/src/: base_evaluator.py
rl/internbootcamp_v2/internbootcamp/utils/: data_generation.py  data_postprocess.py  jsonl2parquet.py
rl/internbootcamp_v2/internbootcamp/utils/tool_server/: cli.py  master_server.py  worker_server.py
rl/internbootcamp_v2/internbootcamp/web_service/: API.md  QUICKSTART.md  README.md  requirements_frontend.txt  start_backend.sh  start_frontend.sh  test_imports.py
rl/internbootcamp_v2/internbootcamp/web_service/backend/: __init__.py  main.py
rl/internbootcamp_v2/internbootcamp/web_service/frontend/: __init__.py  streamlit_app.py
rl/internbootcamp_v2/verl/: .gitignore  exclude-list.txt  requirements.txt  verl-cache
rl/internbootcamp_v2/verl/verl/model_merger/: __main__.py
rl/internbootcamp_v2/verl/verl/workers/: fsdp_workers.py  megatron_workers.py
(+119 files in other folders)
