[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timely-eval"
version = "0.1.0"
description = "Evaluation framework for time-aware test-time scaling agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Timely Machine Authors" }]
dependencies = [
  "openai>=1.0.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
agentic = [
  "numpy>=1.23.0",
  "pandas>=1.5.0",
  "scikit-learn>=1.2.0",
]
interactive = [
  "click>=8.0.0",
  "jericho>=3.2.0",
]
dev = [
  "pytest>=7.0.0",
  "ruff>=0.5.0",
]
all = [
  "numpy>=1.23.0",
  "pandas>=1.5.0",
  "scikit-learn>=1.2.0",
  "click>=8.0.0",
  "jericho>=3.2.0",
  "pytest>=7.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
timely-eval = "timely_eval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
