# -------------------------------
# build-system
# -------------------------------
[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

# -------------------------------
# project (PEP 621 metadata)
# -------------------------------
[project]
name = "internbootcamp"
version = "2.0.0"
description = "internbootcamp"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "internbootcamp v2.0.0 Team"}
]

dependencies = [
    "fastmcp>=3.4.2,<4",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.4",
]
jericho = [
    "func-timeout>=4.3.5",
    "jericho>=3.3.1",
]
all = [
    "scikit-learn>=1.4",
    "func-timeout>=4.3.5",
    "jericho>=3.3.1",
]

# -------------------------------
# tool.setuptools - Additional config
# -------------------------------
[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "."
